Rewrite password generator core as library
Make gui app use it
Add cli version based on dotnet core so it can run on Linux and macOS

--- a/PassGen/PassGen.csproj
+++ b/PassGen/PassGen.csproj
@@ -102,5 +102,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PassGenLib\PassGenLib.csproj">
+      <Project>{5ab17297-a053-478d-8510-fad591a9a28a}</Project>
+      <Name>PassGenLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
